--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-weight: 400;
+  font-family: 'League Spartan';
+  src: url('app/assets/fonts/LeagueSpartan-Regular.woff') format('woff'),
+    url('app/assets/fonts/LeagueSpartan-Regular.woff2') format('woff2');
+}
+@font-face {
+  font-weight: 700;
+  font-family: 'League Spartan';
+  src: url('app/assets/fonts/LeagueSpartan-Bold.woff2') format('woff'),
+    url('app/assets/fonts/LeagueSpartan-Bold.woff2') format('woff2');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
 .App {
   text-align: center;
 }
@@ -14,11 +29,11 @@
 }
 
 .App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   font-size: calc(10px + 2vmin);
 }
 
