--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-weight: 400;
+  font-family: 'League Spartan';
+  src: url('app/assets/fonts/LeagueSpartan-Regular.woff') format('woff'),
+    url('app/assets/fonts/LeagueSpartan-Regular.woff2') format('woff2');
+}
+@font-face {
+  font-weight: 700;
+  font-family: 'League Spartan';
+  src: url('app/assets/fonts/LeagueSpartan-Bold.woff2') format('woff'),
+    url('app/assets/fonts/LeagueSpartan-Bold.woff2') format('woff2');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'League Spartan', 'arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
