--- a/src/app/assets/scss/partials/_buttons.scss
+++ b/src/app/assets/scss/partials/_buttons.scss
@@ -1,10 +1,10 @@
 .cta {
-  @apply inline-block px-6 py-4 relative tracking-widest text-xs z-10 w-auto uppercase;
+  @apply inline-block px-6 pt-4 pb-3 relative tracking-widest text-xs font-bold z-10 w-auto uppercase leading-none;
   &:before {
     max-width: 2.25rem;
-  content: '';
-  transition: max-width 300ms ease-out;
-  @apply absolute top-1/2 left-0 transform -translate-y-1/2 block rounded-full w-full h-9 -z-10 pointer-events-none;
+    content: '';
+    transition: max-width 300ms ease-out;
+    @apply absolute top-1/2 left-0 transform -translate-y-1/2 block rounded-full w-full h-9 -z-10 pointer-events-none;
   }
   &-yellow {
     &:before {
