--- a/src/app/assets/scss/partials/_buttons.scss
+++ b/src/app/assets/scss/partials/_buttons.scss
@@ -11,6 +11,11 @@
       @apply bg-yellow;
     }
   }
+  &-green {
+    &:before {
+      @apply bg-green-500;
+    }
+  }
   &:hover {
     &:before {
       max-width: 100%;
