--- a/src/app/assets/scss/components/_body.scss
+++ b/src/app/assets/scss/components/_body.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: 'League Spartan', 'arial', sans-serif;
+  font-family: 'Poppins', 'arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  @apply text-gray;
+  @apply text-gray text-sm;
 }
