--- a/src/app/assets/scss/partials/_buttons.scss
+++ b/src/app/assets/scss/partials/_buttons.scss
@@ -1,5 +1,5 @@
 .cta {
-  @apply inline-block px-6 pt-4 pb-3 relative tracking-widest text-xs font-medium z-10 w-auto uppercase leading-none;
+  @apply inline-block px-6 pt-4 pb-3 relative tracking-wider font-normal z-10 w-auto leading-none;
   &:before {
     max-width: 2.25rem;
     content: '';
