--- a/src/app/assets/scss/partials/_titles.scss
+++ b/src/app/assets/scss/partials/_titles.scss
@@ -4,8 +4,10 @@ h2 {
   @include fluid-type(28, 42, 480, 1200);
 }
 
-h3 {
-  @apply font-serif text-3xl font-normal leading-none;
+h3,
+.h3 {
+  @apply font-serif leading-none font-normal;
+  @include fluid-type(24, 30, 480, 1200);
 }
 
 h4 {
